--- a/data/readme.text
+++ b/data/readme.text
@@ -1,1 +1,2 @@
-Files required for running the notebook
+Files required for running the notebook are deposited in zenodo: https://zenodo.org/records/14028473
+GEMs are deposited on Zenodo :  https://zenodo.org/records/13825392
