Add data availability section with Zenodo link
Added a section for data availability with a link to the core bundle.

--- a/data/readme.text
+++ b/data/readme.text
@@ -1,2 +1,3 @@
-Files required for running the notebook are deposited in zenodo: https://zenodo.org/records/14028473
-GEMs are deposited on Zenodo :  https://zenodo.org/records/13825392
+> **Data availability (Zenodo)**
+
+> * Core bundle (scripts + supporting data + panGEM): https://zenodo.org/records/17581962
